fixed img's looking squished

--- a/src/style/App/App.scss
+++ b/src/style/App/App.scss
@@ -64,7 +64,7 @@ html {
     background: $royalBlue;
     width: 100%;
     margin: 0 auto;
-    padding: 0.25em 0 0.5em;
+    padding: 0.75em 0 0.5em;
     display: flex;
     justify-content: center;
     font-size: 0.9em;
